# roswan

./: README.md
bag/: motion_test2_2018-06-19-11-54-25.bag
doc/: setup_beaglebone.md  setup_ros.md  setup_roswan.md  setup_ubuntu.md  swan_addition.md
motion_test/: core.sh  test1.sh  test2.sh  test3.sh
motion_test/vel_data/: speed1_7.txt  speed1_8.txt  speed1_85.txt  speed1_9.txt  speed1_95.txt  speed2_0.txt  speed_pwr.ods  test
os5000/: CMakeLists.txt
os5000/launch/: os5000.launch
os5000/src/: os5000_ros.cpp
r2c2/: CMakeLists.txt  package.xml
r2c2/include/r2c2/: agent.h  captain.h
r2c2/launch/: agent_test.launch
r2c2/params/: capabilities.yaml  mission_points.json
r2c2/src/: agent.cpp  captain.cpp  json_goal_test.cpp  loiter_test.cpp
r2c2/srv/: agent_request.srv
ros_trex_driver/: README.md  trex_driver.py
setup/: setup_ubuntu.sh
swan_bringup/: CMakeLists.txt  package.xml
swan_bringup/launch/: base.launch  keyboard_teleop.launch  minimal.launch  play_sim.launch  swan_base_bringup.launch
swan_bringup/launch/include/: controller.launch.xml  drivers.launch.xml  localization.launch.xml  tf.launch.xml
swan_bringup/launch/include/controller/: diff_controller.launch.xml
swan_bringup/launch/include/drivers/: gps.launch.xml  os5000.launch.xml  trex_driver.launch.xml
swan_bringup/launch/motion_test/: motion_test1.launch  motion_test2.launch
swan_bringup/launch/motion_test1/: motion_test1.launch  motion_test2.launch  motion_test3.launch
swan_bringup/launch/motion_test2/: localization_test.launch  navigation_test.launch
swan_bringup/params/controller/diff_controller/: pwr_speed_trex_driver.yaml  standard_auto.yaml
swan_bringup/params/drivers/: gps_nmea.yaml  os5000_compass.yaml  trex_driver.yaml
swan_bringup/params/localization/: dynamic_odom_estimator.yaml  ekf_localization_node.yaml  sensor_odom_estimator.yaml
swan_bringup/rviz/: gps_raw_visual.rviz  swan_navigation.rviz
swan_bringup/scripts/: setup.sh
swan_bringup/swan_bringup/launch/: base.launch
swan_controller/gps_tools/: CMakeLists.txt  package.xml
swan_controller/gps_tools/include/gps_tools/: utm_tf_node.h
swan_controller/gps_tools/src/: main.cpp  static_utm_publisher.cpp  utm_tf_node.cpp
swan_controller/swan_controller/: CMakeLists.txt  README.md  package.xml
swan_controller/swan_controller/cfg/: swanPID.cfg
swan_controller/swan_controller/include/swan_controller/: controller.h  diff_controller.h  pid_controller.h
swan_controller/swan_controller/launch/: keyboard_teleop.launch
swan_controller/swan_controller/script/: teleop_twist_keyboard.py
swan_controller/swan_controller/src/: controller.cpp  diff_controller.cpp  pid_controller.cpp  swan_controller_node.cpp
swan_controller/swan_localization/: CMakeLists.txt  README.md  package.xml
swan_controller/swan_localization/include/swan_localization/: dynamic_odom_estimator.h  utm_tf_node.h
swan_controller/swan_localization/launch/test/: dynamic_odom_estimator.launch
swan_controller/swan_localization/rviz/: dynamic_odom_estimator.rviz
swan_controller/swan_localization/src/: dynamic_odom_estimator.cpp  dynamic_odom_estimator_node.cpp  sensor_odom_estimator.cpp  static_utm_publisher.cpp  utm_tf_node.cpp
swan_controller/swan_sim/: CMakeLists.txt  package.xml
swan_controller/swan_sim/cfg/: swanVelSim.cfg
swan_controller/swan_sim/include/swan_sim/: auto_sim_core.h  base_config.h
swan_controller/swan_sim/src/: auto_sim.cpp  auto_sim_core.cpp  constant_speed_sim.cpp
swan_driver/os5000/: package.xml
swan_driver/os5000/include/: os5000_core.h  os5000_ros.h
swan_driver/os5000/launch/: os5000.launch
swan_driver/os5000/rviz/: compass_visual.rviz
swan_driver/os5000/src/: os5000_core.cpp
swan_driver/os5000_compass/: CMakeLists.txt  README.md  package.xml
swan_driver/os5000_compass/include/os5000_compass/: os5000.h
swan_driver/os5000_compass/launch/: compass_visual.launch
swan_driver/os5000_compass/src/: os5000.cpp
swan_driver/razor_imu/: CMakeLists.txt  package.xml
swan_driver/razor_imu/include/razor_imu/: razor_imu.h
swan_driver/razor_imu/src/: razor_imu.cpp
swan_driver/razor_imu_9dof/config/: my_razor.yaml  razor.yaml
swan_driver/razor_imu_9dof/launch/: razor-pub.launch
swan_driver/razor_imu_9dof/nodes/: imu_node.py
swan_driver/razor_imu_firmware/Arduino/Razor_AHRS/: Razor_AHRS.ino
swan_driver/razor_imu_firmware/Processing/Magnetometer_calibration/: magnetom.float
swan_driver/ros_trex_driver/: CMakeLists.txt  config-multi.yaml  configure.launch  multi.launch  package.xml  simple.launch
swan_msgs/: CMakeLists.txt  package.xml
swan_msgs/msg/: PID_diagnostic.msg
swan_navigation/: CMakeLists.txt  package.xml
swan_navigation/launch/: navigate.launch
swan_navigation/launch/include/move_base/: move_base_2wd.launch  move_base_ackermann.launch
swan_navigation/maps/: centre.yaml  geo_fence.yaml  i3.json  i3.pgm  i3.yaml  i3centre.yaml  pandan.json  pandan.yaml
swan_navigation/param/navigation/: base_local_planner_default_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
swan_navigation/script/: draw_geofence.py
visual_tools/rqt_perspectives/: swan_pid_tuning.perspective
visual_tools/rviz/: localization_test.rviz  navigation_test.rviz
visual_tools/rviz_satellite/launch/: demo.gps  demo.launch  demo.rviz
