<?xml version="1.0"?>
<package format="2">
  	<name>swan_bringup</name>
  	<version>1.0.0</version>
  	<description>The swan_bringup package</description>

  	<maintainer email="brian97cbn@gmail.com">Chen Bainian</maintainer>


  	<license>TODO</license>

  	<author email="brian97cbn@gmail.com">Chen Bainian</author>


  	<buildtool_depend>catkin</buildtool_depend>
  
  	<!-- Driver packages -->
  	<depend>os5000_compass</depend>
  	<depend>trex_driver</depend>
  	<depend>nmea_navsat_driver</depend>
  
  	<depend>swan_msgs</depend>
  	<depend>swan_controller</depend>
  	<depend>swan_localization</depend>
  	<depend>swan_navigation</depend>
  	<depend>r2c2</depend>
  	<depend>swan_sim</depend>
  
  

  	<!-- The export tag contains other, unspecified, tags -->
  	<export>
    	<!-- Other tools can request additional information be placed here -->

  	</export>
</package>
