<?xml version="1.0"?>
<package>
  <name>swan_msgs</name>
  <version>0.0.1</version>
  <description>The swan_msgs package</description>
  <maintainer email="brian97cbn@gmail.com">Chen Bainian</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
