<?xml version="1.0"?>
<package format="2">
  <name>swan_navigation</name>
  <version>1.0.0</version>
  <description>The swan_navigation package</description>

  <maintainer email="brian97cbn@gmail.com">Chen Bainian</maintainer>
  <author email="brian97cbn@gmail.com">Chen Bainian</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>move_base</depend>


  <export>
  </export>
</package>
