<?xml version="1.0"?>
<package>
    <name>os5000</name>
    <version>1.0.0</version>
    <description>compass</description>
    <maintainer email="brian97cbn@gmail.com">Chen Bainian</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>tf</run_depend>
    <run_depend>sensor_msgs</run_depend>

    <export>
    </export>
</package>
