<?xml version="1.0"?>
<package format="2">
  <name>razor_imu</name>
  <version>0.0.0</version>
  <description>The razor_imu package</description>

  
  <maintainer email="brian97cbn@gmail.com">Chen Bainian</maintainer>
  <author email="brian97cbn@gmail.com">Chen Bainian</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
